macro layout xs finito

--- a/index.html
+++ b/index.html
@@ -11,8 +11,48 @@
     <title>Spotify Web</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <!-- <nav>
+            <div>
+                <div class="logo">
+                    <img src="img/logo-small.svg" alt="Spotify small logo">
+                </div>
+                <div class="nav-sez">
+                    <ul>
+                        <li>
+                            <i>
+                                <img src="https://icons8.it/icon/1iF9PyJ2Thzo/casa" alt="home icon">
+                            </i>
+                            <p>
+                                Home
+                            </p>
+                        </li>
+                        <li>
+                            <i>
+                                <img src="https://icons8.it/icon/59878/ricerca" alt="search icon">
+                            </i>
+                            <p>
+                                Cerca
+                            </p>
+                        </li>
+                        <li>
+                            <i>
+                                <img src="https://icons8.it/icon/sPSAhBoPUC3I/biblioteca" alt="library icon">
+                            </i>
+                            <p>
+                                La tua libreria
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="playlist"></div>
+            </div>
+            <div></div>
+        </nav> -->
+    </header>
     <main></main>
-    <footer></footer>
+    <footer>
+        
+    </footer>
 </body>
 </html>
