--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header>
-        <!-- <nav>
-            <div>
+        <nav>
+            <div class="nav-sez-container">
                 <div class="logo">
                     <img src="img/logo-small.svg" alt="Spotify small logo">
                 </div>
@@ -21,7 +21,9 @@
                     <ul>
                         <li>
                             <i>
-                                <img src="https://icons8.it/icon/1iF9PyJ2Thzo/casa" alt="home icon">
+                                <svg class="fill-light-gray" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="17.5" height="17.5" viewBox="0 0 48 48">
+                                <path d="M39.5,43h-9c-1.381,0-2.5-1.119-2.5-2.5v-9c0-1.105-0.895-2-2-2h-4c-1.105,0-2,0.895-2,2v9c0,1.381-1.119,2.5-2.5,2.5h-9	C7.119,43,6,41.881,6,40.5V21.413c0-2.299,1.054-4.471,2.859-5.893L23.071,4.321c0.545-0.428,1.313-0.428,1.857,0L39.142,15.52	C40.947,16.942,42,19.113,42,21.411V40.5C42,41.881,40.881,43,39.5,43z"></path>
+                                </svg>                                
                             </i>
                             <p>
                                 Home
@@ -29,7 +31,9 @@
                         </li>
                         <li>
                             <i>
-                                <img src="https://icons8.it/icon/59878/ricerca" alt="search icon">
+                                <svg class="fill-light-gray" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="17.5" height="17.5" viewBox="0 0 30 30">
+                                <path d="M 13 3 C 7.4889971 3 3 7.4889971 3 13 C 3 18.511003 7.4889971 23 13 23 C 15.396508 23 17.597385 22.148986 19.322266 20.736328 L 25.292969 26.707031 A 1.0001 1.0001 0 1 0 26.707031 25.292969 L 20.736328 19.322266 C 22.148986 17.597385 23 15.396508 23 13 C 23 7.4889971 18.511003 3 13 3 z M 13 5 C 17.430123 5 21 8.5698774 21 13 C 21 17.430123 17.430123 21 13 21 C 8.5698774 21 5 17.430123 5 13 C 5 8.5698774 8.5698774 5 13 5 z"></path>
+                                </svg>
                             </i>
                             <p>
                                 Cerca
@@ -37,7 +41,7 @@
                         </li>
                         <li>
                             <i>
-                                <img src="https://icons8.it/icon/sPSAhBoPUC3I/biblioteca" alt="library icon">
+                                <img src="img/icons/digital-library.png" alt="library icon">
                             </i>
                             <p>
                                 La tua libreria
@@ -47,12 +51,35 @@
                 </div>
                 <div class="playlist"></div>
             </div>
-            <div></div>
-        </nav> -->
+            <div class="profile-container">
+                <div>
+                    <i class="fa-solid fa-arrow-down"></i>
+                    <p></p>
+                </div>
+                <div>
+                    <img src="https://people.eecs.berkeley.edu/~hazem.torfah/img/s_akshay.png" alt="profile image">
+                    <p></p>
+                </div>
+            </div>
+        </nav>
     </header>
     <main></main>
     <footer>
-        
+        <div>
+            <div>
+                <img src="" alt="">
+            </div>
+            <div>
+                <p></p>
+                <p></p>
+            </div>
+            <div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+        <div></div>
+        <div></div>
     </footer>
 </body>
 </html>
