fix size and added first footer part

--- a/index.html
+++ b/index.html
@@ -104,25 +104,25 @@
         
     </main>
     <footer>
-        <!-- <div>
+        <div class="song-in-progress">
             <div>
                 <img src="img/sinister.jpeg" alt="Sinister album iamge">
             </div>
-            <div>
-                <p>Sinister</p>
-                <p>Brano nome</p>
+            <div class="song-in-progress-info">
+                <p class="song-in-progress-title">Sinister</p>
+                <p class="song-in-progress-subtitle">Brano nome</p>
             </div>
             <div>
-                <div>
-                    <i class="fa-regular fa-folder"></i>
-                </div>
-                <div>
+                <div class="folder-icon-container">
                     <i class="fa-regular fa-heart"></i>
+                </div>
+                <div class="like-icon-container">
+                    <i class="fa-regular fa-folder"></i>
                 </div>
             </div>
         </div>
         <div></div>
-        <div></div> -->
+        <div></div>
     </footer>
 </body>
 </html>
