finire parte centrale footer

--- a/index.html
+++ b/index.html
@@ -121,8 +121,40 @@
                 </div>
             </div>
         </div>
-        <div></div>
-        <div></div>
+        <div class="songs-handler-container">
+            <div class="song-handler">
+                <div>
+                    <i class="fa-solid fa-shuffle"></i>
+                </div>
+                <div>
+                    <i class="fa-solid fa-backward-step"></i>
+                </div>
+                <div class="songs-handler-play-container">
+                    <i class="songs-handler-play fa-regular fa-circle-play"></i>
+                </div>
+                <div>
+                    <i class="arrow-step fa-solid fa-forward-step"></i>
+                </div>
+                <div>
+                    <i class="fa-solid fa-arrow-rotate-right"></i>
+                </div>
+            </div>
+            <div class="song-status">
+                <p class="song-curr-time">
+                    0:25
+                </p>
+                <div class="song-curr-time-bar-container">
+                    <div class="song-curr-time-bar">
+                    </div>
+                </div>
+                <p class="song-tot-time">
+                    4:35
+                </p>
+            </div>
+        </div>
+        <div class="song-sound-handler-container">
+            o
+        </div>
     </footer>
 </body>
 </html>
