--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
         <div class="songs-handler-container">
             <div class="song-handler">
-                <div>
+                <div class="shuffle">
                     <i class="fa-solid fa-shuffle"></i>
                 </div>
                 <div>
@@ -135,7 +135,7 @@
                 <div>
                     <i class="arrow-step fa-solid fa-forward-step"></i>
                 </div>
-                <div>
+                <div class="arrow-rotate">
                     <i class="fa-solid fa-arrow-rotate-right"></i>
                 </div>
             </div>
@@ -145,6 +145,7 @@
                 </p>
                 <div class="song-curr-time-bar-container">
                     <div class="song-curr-time-bar">
+                        <div></div>
                     </div>
                 </div>
                 <p class="song-tot-time">
@@ -153,7 +154,14 @@
             </div>
         </div>
         <div class="song-sound-handler-container">
-            o
+            <i class="fa-solid fa-list-ul"></i>
+            <i class="fa-solid fa-display"></i>
+            <i class="fa-solid fa-volume-high"></i>
+            <div class="song-curr-time-bar-container">
+                <div class="song-curr-time-bar">
+                    <div></div>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
