Main quasi completo, fixed element mancante

--- a/index.html
+++ b/index.html
@@ -101,7 +101,144 @@
         </nav>
     </header>
     <main>
-        
+        <div class="main-fixed-container">
+            <button>EFFETTUA L'UPGRADE</button>
+        </div>
+        <div class="main-contents-container">
+            <div class="main-genre">
+                <ul>
+                    <li>
+                        IN EVIDENZA    
+                    </li>
+                    <li>
+                        PODCAST
+                    </li>
+                    <li>
+                        CLASSIFICHE
+                    </li>
+                    <li>
+                        GENERI E MOOD
+                    </li>
+                    <li>
+                        NUOVE UCITE
+                    </li>
+                    <li>
+                        SCOPRI
+                    </li>
+                </ul>
+            </div>
+            <div class="selections-container">
+                <div class="selection-title">
+                    <h2>
+                        Recently played
+                    </h2>
+                </div>
+                <ul>
+                    <li>
+                        <img src="img/metal_lifting.jpg" alt="Heavy Metal">
+                        <h3>
+                            Heavy Metal
+                        </h3>
+                        <p>
+                            subtitle
+                        </p>
+                    </li>
+                    <li>
+                        <img src="img/stranger.jpeg" alt="Stranger Things">
+                        <h3>
+                            Stranger Things, Vol. 1(a Netflix Original Series Soundtrack)
+                        </h3>
+                        <p>
+                            Kyle Dixon & Michael Stein
+                        </p>
+                    </li>
+                    <li>
+                        <img src="img/aquietplace.jpeg" alt="A quiet place">
+                        <h3>
+                            A quiet place
+                        </h3>
+                        <p>
+                            suntitle
+                        </p>
+                    </li>
+                    <li>
+                        <img src="img/split.jpeg" alt="Split">
+                        <h3>
+                            Split
+                        </h3>
+                        <p>
+                            subtitle
+                        </p>
+                    </li>
+                    <li>
+                        <img src="img/cure.jpeg" alt="Cure">
+                        <h3>
+                            A cure for welless
+                        </h3>
+                        <p>
+                            subtitle
+                        </p>
+                    </li>
+                    <li>
+                        <img src="img/sinister.jpeg" alt="Sinister">
+                        <h3>
+                            Sinister
+                        </h3>
+                        <p>
+                            Subtitle
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <div class="selections-container">
+                <div class="selection-title">
+                    <h2>
+                        Creato per John Doe
+                    </h2>
+                    <p>
+                        Più ascoltati, più accurati saranno i suggerimenti
+                    </p>
+                </div>
+                <ul>
+                    <li>
+                        <img src="img/radar.jpeg" alt="Radar">
+                        <h3>
+                            Release Radar
+                        </h3>
+                    </li>
+                    <li>
+                        <img src="img/mixdaily.jpeg" alt="Daily Mix">
+                        <h3>
+                            Dally Mix 1
+                        </h3>
+                    </li>
+                </ul>
+            </div>
+            <div class="selections-container">
+                <div class="selection-title">
+                    <h2>
+                        Artisti più popolari
+                    </h2>
+                    <p>
+                        Più ascoltati, più accurati saranno i suggerimenti
+                    </p>
+                </div>
+                <ul>
+                    <li>
+                        <img class="circular-img-border" src="img/youg.jpeg" alt="Radar">
+                        <h3>
+                            Lana del Ray
+                        </h3>
+                    </li>
+                    <li>
+                        <img class="circular-img-border" src="img/einaudi.jpeg" alt="Ludovico Einaudi">
+                        <h3>
+                            Ludovico Einaudi
+                        </h3>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="song-in-progress">
